--- a/src/CustomerSite/Views/Home/_LandingPage.cshtml
+++ b/src/CustomerSite/Views/Home/_LandingPage.cshtml
@@ -59,6 +59,7 @@
                         </dt>
                         <dd class="col-sm-9 p-2 p10">
                             @Html.DisplayFor(model => model.PlanId)
+                            @Html.ValidationMessageFor(model => model.PlanId, "", new { @class = "text-danger" })
                         </dd>
                         <dt class="col-sm-3 p-2 p10">
                             @Html.DisplayName("Purchaser Email ")
@@ -159,8 +160,12 @@
                                             }
                                             else
                                             {
+@*                                                var a = @Model.SubscriptionParameters[i].Type;
+                                                var b = @Model.SubscriptionParameters[i].Value;
+                                                var c = @Model.SubscriptionParameters[i].Htmltype;*@
                                                 @Html.TextBoxFor(model => model.SubscriptionParameters[i].Value, new { @class = @Model.SubscriptionParameters[i].Type + " w200", @type = @Model.SubscriptionParameters[i].Htmltype })
                                             }
+                                            @Html.ValidationMessageFor(model => model.SubscriptionParameters[i].Value, "", new { @class = "text-danger" })
 
                                         </dd>
                                     }
