--- a/src/AdminSite/Views/Home/SubscriptionDetails.cshtml
+++ b/src/AdminSite/Views/Home/SubscriptionDetails.cshtml
@@ -107,7 +107,7 @@
                     </dl>
                 </div>
                 <div class="text-right">
-                    @if (Model.SubscriptionStatus == SubscriptionStatusEnumExtension.Subscribed || Model.SubscriptionStatus == SubscriptionStatusEnumExtension.UnsubscribeFailed)
+                    @if (Model.SubscriptionStatus == SubscriptionStatusEnumExtension.Subscribed || Model.SubscriptionStatus == SubscriptionStatusEnumExtension.UnsubscribeFailed || Model.SubscriptionStatus == SubscriptionStatusEnumExtension.DeprovisioningFailed)
                     {
                         <button type="submit" asp-action="SubscriptionOperation" asp-route-subscriptionId="@Model.Id" asp-route-planId="@Model.PlanId" asp-route-operation="Deactivate" class="cm-button-danger text-right">Unsubscribe</button>
                     }
