--- a/src/AdminSite/Views/Home/Subscriptions.cshtml
+++ b/src/AdminSite/Views/Home/Subscriptions.cshtml
@@ -75,6 +75,11 @@
                                                     <a class="nav-link dropdown cm-link-button" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
                                                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                                                         <a class="dropdown-item cm-dropdown-option" asp-controller="Home" asp-action="SubscriptionDetails" asp-route-subscriptionId="@Model.Subscriptions[i].Id">View Details</a>
+                                                        @if (subscription.SubscriptionStatus == SubscriptionStatusEnumExtension.Subscribed || subscription.SubscriptionStatus == SubscriptionStatusEnumExtension.UnsubscribeFailed)
+                                                        {
+                                                            <a class="dropdown-item cm-dropdown-option" asp-action="SubscriptionGuideline" asp-route-subscriptionId="@Model.Subscriptions[i].Id" asp-route-planId="@Model.Subscriptions[i].PlanId">View Guideline</a>
+                                                            <a class="dropdown-item cm-dropdown-option" asp-action="DownloadWorkspace" asp-route-subscriptionId="@Model.Subscriptions[i].Id" asp-route-planId="@Model.Subscriptions[i].PlanId">Download Workspace</a>
+                                                        }
                                                         @if (subscription.IsMeteringSupported && subscription.SubscriptionStatus == SubscriptionStatusEnumExtension.Subscribed)
                                                         {
                                                             <a class="dropdown-item cm-dropdown-option" asp-action="RecordUsage" asp-controller="Home" asp-route-subscriptionId="@subscription.SubscribeId">Manage Usage</a>
