--- a/src/CustomerSite/Views/Home/Subscriptions.cshtml
+++ b/src/CustomerSite/Views/Home/Subscriptions.cshtml
@@ -61,6 +61,8 @@
                                                         @if (subscription.SubscriptionStatus == SubscriptionStatusEnumExtension.Subscribed)
                                                         {
                                                             <a class="dropdown-item cm-dropdown-option" asp-action="ViewSubscription" asp-route-subscriptionId="@Model.Subscriptions[i].Id" asp-route-planId="@Model.Subscriptions[i].PlanId" asp-route-operation="Deactivate">Unsubscribe</a>
+                                                            <a class="dropdown-item cm-dropdown-option" asp-action="SubscriptionGuideline" asp-route-subscriptionId="@Model.Subscriptions[i].Id" asp-route-planId="@Model.Subscriptions[i].PlanId">View Guideline</a>
+                                                            <a class="dropdown-item cm-dropdown-option" asp-action="DownloadWorkspace" asp-route-subscriptionId="@Model.Subscriptions[i].Id" asp-route-planId="@Model.Subscriptions[i].PlanId">Download Workspace</a>
                                                             @if (subscription.AcceptSubscriptionUpdates == true)
                                                             {
                                                                 <a class="dropdown-item cm-dropdown-option" onclick="ViewSubscriptionDetail('@Model.Subscriptions[i].Id')" data-target="#Mymode">Change Plan</a>      
